[package]
name = "sawbill-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = "0.4"
env_logger = "0.8.3"
indexmap = "1.6.2"
clap = { version = "*", features = ["yaml"] }

[dependencies.pnet]
version = "0.28.0"

[dependencies.redis]
version = "*"