[package]
name = "sawbill"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.10.0"
indexmap = "2.0.0"
log = "0.4.20"
pnet = "0.34.0"
redis = "0.23.3"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.5"
